# crafting-calculator

./: Cargo.toml  README.md  build.rs
src/: calculator.rs  lib.rs  main.rs  recipe.rs  stack.rs  util.rs
ui/: MainWindow.slint  Recipe.slint
