[package]
name = "crafting-calculator"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.3", features = ["derive"] }
nom = "^7.1.3"
priority-queue = "^1.3.0"
slint = { version = "^1.3.2", optional = true }

[build-dependencies]
slint-build = { version = "^1.3.0", optional = true }

[features]
default = ["gui"]
gui = ["dep:slint", "dep:slint-build"]
